gcc/testsuite/rust/rustc/ui/rfc-2091-track-caller/only-for-fns.rs
#[track_caller]
struct S;
// { dg-error ".E0739." "" { target *-*-* } .-2 }

fn main() {}

